--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,8 @@
         "pantheon-upstreams/upstream-configuration": "dev-main",
         "wpackagist-plugin/pantheon-advanced-page-cache": "*",
         "wpackagist-plugin/wp-native-php-sessions": "*",
-        "cweagans/composer-patches": "^1.7"
+        "cweagans/composer-patches": "^1.7",
+        "wpackagist-theme/twentytwentyfive": "^1.2"
     },
     "require-dev": {
         "pantheon-systems/pantheon-wp-coding-standards": "*",
